--- a/index.ipynb
+++ b/index.ipynb
@@ -210,27 +210,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['B. u. e. n. o. s.  . A. i. r. e. s',\n",
-       " 'T. o. r. o. n. t. o',\n",
-       " 'M. a. r. a. k. e. s. h',\n",
-       " 'A. l. b. u. q. u. e. r. q. u. e',\n",
-       " 'L. o. s.  . C. a. b. o. s',\n",
-       " 'G. r. e. e. n. v. i. l. l. e',\n",
-       " 'A. r. c. h. i. p. e. l. a. g. o.  . S. e. a',\n",
-       " 'P. y. e. o. n. g. c. h. a. n. g',\n",
-       " 'W. a. l. l. a.  . W. a. l. l. a.  . V. a. l. l. e. y',\n",
-       " 'S. a. l. i. n. a.  . I. s. l. a. n. d',\n",
-       " 'S. o. l. t. a',\n",
-       " 'I. g. u. a. z. u.  . F. a. l. l. s']"
+       "['1. Buenos Aires',\n",
+       " '2. Toronto',\n",
+       " '3. Marakesh',\n",
+       " '4. Albuquerque',\n",
+       " '5. Los Cabos',\n",
+       " '6. Greenville',\n",
+       " '7. Archipelago Sea',\n",
+       " '8. Pyeongchang',\n",
+       " '9. Walla Walla Valley',\n",
+       " '10. Salina Island',\n",
+       " '11. Solta',\n",
+       " '12. Iguazu Falls']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,26 +238,25 @@
    "source": [
     "names_and_ranks = [] \n",
     "for index in city_indices:\n",
-    "    names_and_ranks.append(\n",
+    "    names_and_ranks.append(str(index + 1) + '. ' + city_names[index])\n",
     "names_and_ranks\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-e11842da972d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# '1. Buenos Aires'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# '2. Toronto'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# '12. Iguazu Falls'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "'12. Iguazu Falls'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
