--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = [city]\n",
+    "city_populations = [city['Population'] for city in ]\n",
     "for city in cities:\n",
     "    city_populations.append()"
    ]
