Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -436,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = [city]"
+    "city_areas = [city[area] for city in cities]"
    ]
   },
   {
