Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -449,7 +449,7 @@
     }
    ],
    "source": [
-    "city_areas = [city[area] for city in cities]\n",
+    "city_areas = [city['area'] for city in cities]\n",
     "city_areas"
    ]
   },
