Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -432,30 +432,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'area' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-ef3ba7273695>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcity_areas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcity\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0marea\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcity\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcities\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcity_areas\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-21-ef3ba7273695>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcity_areas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcity\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0marea\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcity\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcities\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcity_areas\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'area' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[203, 630, 230, 491, 3751, 68, 2000, 1464, 35, 26, 59, 2396]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "city_areas = [city['area'] for city in cities]\n",
+    "city_areas = [city['Area'] for city in cities]\n",
     "city_areas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,9 +462,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "name": "populations",
+         "text": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Marakesh",
+          "4. Albuquerque",
+          "5. Los Cabos",
+          "6. Greenville",
+          "7. Archipelago Sea",
+          "8. Pyeongchang",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "type": "bar",
+         "uid": "7dd66fc8-d251-11e9-b911-35f20bd1d78d",
+         "x": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Marakesh",
+          "4. Albuquerque",
+          "5. Los Cabos",
+          "6. Greenville",
+          "7. Archipelago Sea",
+          "8. Pyeongchang",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "y": [
+          2891,
+          2732,
+          929,
+          559,
+          288,
+          93,
+          60,
+          44,
+          33,
+          3,
+          2,
+          0
+         ]
+        },
+        {
+         "name": "areas",
+         "text": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Marakesh",
+          "4. Albuquerque",
+          "5. Los Cabos",
+          "6. Greenville",
+          "7. Archipelago Sea",
+          "8. Pyeongchang",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "type": "bar",
+         "uid": "7dd67338-d251-11e9-b911-35f20bd1d78d",
+         "x": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Marakesh",
+          "4. Albuquerque",
+          "5. Los Cabos",
+          "6. Greenville",
+          "7. Archipelago Sea",
+          "8. Pyeongchang",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "y": [
+          203,
+          630,
+          230,
+          491,
+          3751,
+          68,
+          2000,
+          1464,
+          35,
+          26,
+          59,
+          2396
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"980b9746-b4b5-4591-9432-1765b4445879\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"980b9746-b4b5-4591-9432-1765b4445879\", [{\"name\": \"populations\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Marakesh\", \"4. Albuquerque\", \"5. Los Cabos\", \"6. Greenville\", \"7. Archipelago Sea\", \"8. Pyeongchang\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Marakesh\", \"4. Albuquerque\", \"5. Los Cabos\", \"6. Greenville\", \"7. Archipelago Sea\", \"8. Pyeongchang\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [2891, 2732, 929, 559, 288, 93, 60, 44, 33, 3, 2, 0], \"type\": \"bar\", \"uid\": \"7dde14e4-d251-11e9-b911-35f20bd1d78d\"}, {\"name\": \"areas\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Marakesh\", \"4. Albuquerque\", \"5. Los Cabos\", \"6. Greenville\", \"7. Archipelago Sea\", \"8. Pyeongchang\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Marakesh\", \"4. Albuquerque\", \"5. Los Cabos\", \"6. Greenville\", \"7. Archipelago Sea\", \"8. Pyeongchang\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [203, 630, 230, 491, 3751, 68, 2000, 1464, 35, 26, 59, 2396], \"type\": \"bar\", \"uid\": \"7dde16ec-d251-11e9-b911-35f20bd1d78d\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"980b9746-b4b5-4591-9432-1765b4445879\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"980b9746-b4b5-4591-9432-1765b4445879\", [{\"name\": \"populations\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Marakesh\", \"4. Albuquerque\", \"5. Los Cabos\", \"6. Greenville\", \"7. Archipelago Sea\", \"8. Pyeongchang\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Marakesh\", \"4. Albuquerque\", \"5. Los Cabos\", \"6. Greenville\", \"7. Archipelago Sea\", \"8. Pyeongchang\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [2891, 2732, 929, 559, 288, 93, 60, 44, 33, 3, 2, 0], \"type\": \"bar\", \"uid\": \"7dde14e4-d251-11e9-b911-35f20bd1d78d\"}, {\"name\": \"areas\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Marakesh\", \"4. Albuquerque\", \"5. Los Cabos\", \"6. Greenville\", \"7. Archipelago Sea\", \"8. Pyeongchang\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Marakesh\", \"4. Albuquerque\", \"5. Los Cabos\", \"6. Greenville\", \"7. Archipelago Sea\", \"8. Pyeongchang\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [203, 630, 230, 491, 3751, 68, 2000, 1464, 35, 26, 59, 2396], \"type\": \"bar\", \"uid\": \"7dde16ec-d251-11e9-b911-35f20bd1d78d\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
